// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-hosted-copilot-sdk - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Build and deploy GitHub Copilot SDK apps to Azure. WHEN: build copilot app, create copilot app, copilot SDK, @github/copilot-sdk, scaffold copilot project, copilot-powered app, deploy copilot app, host on azure, azure model, BYOM, bring your own model, use my own model, azure openai model, DefaultAzureCredential, self-hosted model, copilot SDK service, chat app with copilot, copilot-sdk-service template, azd init copilot, CopilotClient, createSession, sendAndWait, GitHub Models API.",
  "extractedKeywords": [
    "apps",
    "azure",
    "bicep",
    "bring",
    "build",
    "byom",
    "chat",
    "copilot",
    "copilot-powered",
    "copilot-sdk",
    "copilot-sdk-service",
    "copilotclient",
    "create",
    "createsession",
    "defaultazurecredential",
    "deploy",
    "github",
    "host",
    "hosted",
    "init",
    "model",
    "models",
    "openai",
    "project",
    "scaffold",
    "sdk",
    "self-hosted",
    "sendandwait",
    "service",
    "template",
    "when",
    "with",
    "your",
  ],
  "name": "azure-hosted-copilot-sdk",
}
`;

exports[`azure-hosted-copilot-sdk - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "apps",
  "azure",
  "bicep",
  "bring",
  "build",
  "byom",
  "chat",
  "copilot",
  "copilot-powered",
  "copilot-sdk",
  "copilot-sdk-service",
  "copilotclient",
  "create",
  "createsession",
  "defaultazurecredential",
  "deploy",
  "github",
  "host",
  "hosted",
  "init",
  "model",
  "models",
  "openai",
  "project",
  "scaffold",
  "sdk",
  "self-hosted",
  "sendandwait",
  "service",
  "template",
  "when",
  "with",
  "your",
]
`;
